<resources>
    <string name="app_name">GucongC</string>
    <string name="app_name_kr">구공시</string>
    <string name="app_name_detail">구근회 공부 시스템</string>
    <string name="action_settings">설정</string>
    <string name="action_home">처음으로</string>
    <string name="close">닫기</string>
    <string name="open">열기</string>
    <string name="my_gugongc_target">나의 구공시 목표</string>
    <string name="nav_target_tree">목표나무 관리</string>
    <string name="target_tree_mng">목표나무 관리하기</string>
    <string name="target_tree_tip">목표나무 키우기Tip</string>
    <string name="find_target_system">목표나무 시스템 찾기</string>
    <string name="nav_score">성적 관리</string>
    <string name="todays_result">오늘의 평가</string>
    <string name="score_mng">성적 관리</string>
    <string name="overall_av">전체 평균</string>
    <string name="overall_av_score">평균 점수</string>
    <string name="my_score">내 점수</string>
    <string name="plan_com">계획달성율</string>
    <string name="ox_perform_rate">오답수행율</string>
    <string name="learning_system">공부시스템</string>
    <string name="attendance_rate">출석율</string>
    <string name="correct_answer_rate">정답율</string>
    <string name="goal_level">목표수준</string>
    <string name="static_text_user_id">아이디</string>
    <string name="static_text_user_pwd">비밀번호</string>
    <string name="log_in">로그인</string>
    <string name="find_idpw">아이디 / 비밀번호 찾기</string>
    <string name="join">회원가입</string>
    <string name="my_gugongc_month">이 달의 미션</string>
    <string name="todays_evaluation">오늘의 평가</string>
    <string name="point">점</string>
    <string name="text_input">입력</string>
    <string name="start">시작</string>
    <string name="week_1">1주</string>
    <string name="developed_gongc">수행한 미션</string>
    <string name="todays_score">오늘의 평가점수</string>
    <string name="input_score">평가점수 입력</string>
    <string name="log_off">로그오프</string>

    <string name="evaluation">/ 평가 :</string>
    <string name="yes"><![CDATA["예"]]></string>
    <string name="no"><![CDATA["아니오"]]></string>
    <string name="ok"><![CDATA["확인"]]></string>
    <string name="cancel"><![CDATA["취소"]]></string>
    <string name="save"><![CDATA["저장"]]></string>
    <string name="show"><![CDATA["보기"]]></string>
    <string name="times"><![CDATA["회"]]></string>
    <string name="send"><![CDATA["전송"]]></string>
    <string name="postfix_percent"><![CDATA["%"]]></string>
    <string name="slash"><![CDATA[" / "]]></string>
    <string name="plus"><![CDATA["+"]]></string>

    <string name="year"><![CDATA["년"]]></string>
    <string name="month"><![CDATA["월"]]></string>
    <string name="day"><![CDATA["일"]]></string>
    <string name="hour"><![CDATA["시"]]></string>
    <string name="minute"><![CDATA["분"]]></string>

    <string name="today"><![CDATA["오늘"]]></string>

    <string name="sunday"><![CDATA["일"]]></string>
    <string name="monday"><![CDATA["월"]]></string>
    <string name="tuesday"><![CDATA["화"]]></string>
    <string name="wednesday"><![CDATA["수"]]></string>
    <string name="thursday"><![CDATA["목"]]></string>
    <string name="friday"><![CDATA["금"]]></string>
    <string name="saturday"><![CDATA["토"]]></string>

    <string name="static_text_plan"><![CDATA["계획"]]></string>
    <string name="static_text_do"><![CDATA["실행"]]></string>
    <string name="static_text_see"><![CDATA["see"]]></string>

    <string name="attendance"><![CDATA["출석"]]></string>
    <string name="static_text_course"><![CDATA["수강"]]></string>
    <string name="static_text_todo"><![CDATA["할일"]]></string>
    <string name="static_text_assignment"><![CDATA["과제"]]></string>
    <string name="static_text_select_day_of_week"><![CDATA["날짜 선택"]]></string>
    <string name="static_text_repeat_day_of_week"><![CDATA["요일 반복"]]></string>
    <string name="static_text_chapter"><![CDATA["교재 목차"]]></string>
    <string name="static_text_select_chapter"><![CDATA["목차 선택"]]></string>

    <string name="static_text_add_assignment"><![CDATA["과제 추가"]]></string>

    <string name="act_schedule_static_text_time_management"><![CDATA["시간 관리"]]></string>

    <string name="static_text_wrong_answer_note"><![CDATA["오답노트"]]></string>
    <string name="hint_user_id"><![CDATA["8 ~ 20자 영문/숫자"]]></string>
    <string name="hint_user_pw"><![CDATA["8 ~ 20자 영문/숫자/특수"]]></string>
    <string name="hint_user_name"><![CDATA["2 ~ 20자 영문/한글"]]></string>
    <string name="hint_user_email"><![CDATA["abcd@smartware.co.kr"]]></string>
    <string name="hint_user_phone_number"><![CDATA["01012345678"]]></string>
    <string name="hint_auth_code"><![CDATA["인증번호"]]></string>
    <string name="hint_recommender"><![CDATA["추천인 아이디"]]></string>
    <string name="msg_auth_code_request_limit"><![CDATA["휴대폰 인증을 위한 인증번호 발송은 1일 최대 3회까지 가능합니다."]]></string>
    <string name="msg_invalid_user_id"><![CDATA["ID(아이디)가 유효하지 않습니다. (8 ~ 20자 영문/숫자)"]]></string>
    <string name="msg_user_id_duplicated"><![CDATA["사용중인 ID입니다."]]></string>
    <string name="msg_user_id_not_duplicated"><![CDATA["사용 가능한 ID입니다."]]></string>
    <string name="msg_invalid_email_address"><![CDATA["이메일 주소가 유효하지 않습니다."]]></string>
    <string name="msg_invalid_phone_number"><![CDATA["휴대폰 번호가 유효하지 않습니다."]]></string>
    <string name="msg_invalid_auth_code"><![CDATA["인증번호가 유효하지 않습니다."]]></string>
    <string name="msg_send_user_id_to_email"><![CDATA["입력하신 이메일로 아이디를 발송했습니다."]]></string>
    <string name="msg_invalid_user_name"><![CDATA["이름이 유효하지 않습니다. (2 ~ 20자 영문/한글)"]]></string>
    <string name="msg_invalid_user_pw"><![CDATA["비밀번호가 유효하지 않습니다. (8 ~ 20자 영문/숫자/특수)"]]></string>
    <string name="msg_mismatch_user_pw_and_pw_confirm"><![CDATA["비밀번호와 비밀번호 확인이 일치하지 않습니다."]]></string>
    <string name="nrc_exceed_phonenum"><![CDATA["동일 휴대폰번호로 2개의 아이디까지 가입이 가능합니다."]]></string>
    <string name="msg_send_user_pw_to_email"><![CDATA["입력하신 이메일로 임시 비밀번호를 발송했습니다."]]></string>
    <string name="static_text_act_find_user_id_pwd_find_id_msg"><![CDATA["회원가입시 등록한 이메일로 아이디가 발송됩니다."]]></string>
    <string name="msg_user_email_duplicated"><![CDATA["사용중인 이메일 주소입니다."]]></string>
    <string name="msg_find_id_sussess_result"><![CDATA["당신의 아이디는 "]]></string>
    <string name="msg_user_email_not_duplicated"><![CDATA["사용 가능한 이메일 주소 입니다."]]></string>
    <string name="msg_check_user_id_duplication"><![CDATA["아이디 중복확인을 해 주세요."]]></string>
    <string name="msg_check_user_email_duplication"><![CDATA["이메일 중복확인을 해 주세요."]]></string>
    <string name="msg_exceed_request_auth_code"><![CDATA["휴대폰 인증을 위한 인증번호 발송회수를 초과하였습니다. (1일 최대 3회)"]]></string>
    <string name="msg_success_auth_code"><![CDATA["인증되었습니다."]]></string>
    <string name="msg_wrong_auth_code"><![CDATA["인증번호가 일치하지 않습니다."]]></string>
    <string name="msg_join_failed"><![CDATA["회원가입에 실패하였습니다."]]></string>
    <string name="msg_join_success_alert_title"><![CDATA["회원가입이 완료되었습니다."]]></string>
    <string name="static_text_act_find_user_id_pwd_find_pw_msg"><![CDATA["회원가입시 등록한 이메일로 임시 비밀번호가 발송됩니다."]]></string>
    <string name="msg_find_pw_error_result"><![CDATA["아이디와 이메일이 일치하지 않습니다.\n 고객센터에 문의하세요."]]></string>
    <string name="msg_find_id_error_result"><![CDATA["이름과 이메일이 일치하는 아이디가 없습니다.\n 고객센터에 문의하세요."]]></string>

    <string name="week_2">2주</string>
    <string name="week_3">3주</string>
    <string name="week_4">4주</string>
    <string name="week_5">5주</string>
    <string name="my_score_question">나의 구공시 목표에 충실하셨나요?</string>
    <string name="set_target">이번달 목표를 입력하세요</string>
    <string name="set_target_warning">한 달간의 목표를 설정합니다. \n신중하게 설정하세요.</string>
    <string name="input_target">목표를 입력하세요</string>
    <string name="double_check">중복확인</string>
    <string name="user_name">이름</string>
    <string name="user_email">이메일</string>
    <string name="static_text_user_pwd_confirm">비밀번호 확인</string>
    <string name="request_auth_code">인증번호전송</string>
    <string name="static_text_user_phone">핸드폰</string>
    <string name="accepted">인증</string>
    <string name="school">학교</string>
    <string name="school_grade">학년</string>
    <string name="school_select">등급</string>
    <string name="grade_hint">초, 중, 고</string>
    <string name="elementary_student">초등학생</string>
    <string name="middle_school_student">중학생</string>
    <string name="high_school_student">고등학생</string>
    <string name="find_school">학교찾기</string>
    <string name="search">검색</string>
    <string name="msg_wait_please">준비중입니다.</string>
    <string name="search_shool_name">학교를 검색하세요</string>
    <string name="find_id">ID(아이디)찾기</string>
    <string name="find_pw">PW(비밀번호)찾기</string>
    <string name="wanna_finish">Back 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="edit_schdule">일정 입력</string>
    <string name="schedule">일정</string>
    <string name="edit_category">항목 선택</string>
    <string name="schedule_name">일정 이름</string>
    <string name="edit_assignment">과제 선택</string>
    <string name="edit_workbook">교재 선택</string>
    <string name="leaderboard" >리더보드</string>
    <string name="gold">골드</string>
    <string name="en_gold">Gold</string>
    <string name="this_time">이번</string>
    <string name="rank_unit">등</string>
    <string name="point_unit">점</string>
    <string name="achievemnet">계획달성</string>
    <string name="all_member">전체회원</string>
    <string name="my_guild">내 길드</string>
    <string name="this_week">이번 주</string>
    <string name="this_month">이번 달</string>
    <string name="cumulative">누적</string>
    <string name="my_gold">내 골드</string>
    <string name="my_attendance">내 출석</string>
    <string name="my_plan_completion">내 계획달성</string>
    <string name="week_unit">주</string>
    <string name="month_unit">달</string>
    <string name="select_icons">확인 아이콘을 선택하세요.</string>
    <string name="select_all">전체 선택</string>
    <string name="do_schedule">일정을 수행하시겠습니까?</string>
    <string name="static_text_act_test_question_nav_bar_title_test_question"><![CDATA["[문제 풀기]"]]></string>
    <string name="static_text_act_test_question_nav_bar_title_wrong_answer_note"><![CDATA["[오답노트]"]]></string>
    <string name="parent">부모님</string>
    <string name="coach">선생님</string>


</resources>
