<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:background="@color/color_white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/my_gugongc_target"
            android:textColor="@color/color_text_medium_gray"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_action_bar_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/set_target"
                android:textColor="@color/color_text_medium_gray"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/set_target_warning"
                android:textColor="@color/color_text_red"
                android:textSize="12dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_dialog_target"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/input_target"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/pure_blue"
                    android:textSize="20dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_blue"
                    android:text="@string/ok"
                    android:textColor="@color/color_text_white"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_blue"
                    android:text="@string/cancel"
                    android:textColor="@color/color_text_white"
                    android:textSize="13dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:elevation="2dp"
        android:id="@+id/img_loading"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:src="@drawable/loading_anim"
        android:scaleType="centerInside"
        android:clickable="true"
        android:background="@color/color_translate_gray"
        android:contentDescription="@string/app_name" />

</RelativeLayout>