<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_act_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/color_action_bar_background">
    <!-- 로그인 화면 구성 START -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name_kr"
            android:textColor="@color/color_text_white"
            android:textSize="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/app_name_detail"
            android:textColor="@color/color_text_white"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/edit_user_id"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:hint="@string/static_text_user_id"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textColor="@color/color_text_black"
            android:textSize="18dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edit_user_pwd"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:hint="@string/static_text_user_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="15.0dp"
            android:paddingRight="15.0dp"
            android:paddingTop="6.67dp"
            android:singleLine="true"
            android:textColor="@color/color_text_black"
            android:textSize="18dp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8.0dp"
            android:onClick="onClick"
            android:background="@drawable/btn_yellow_plat"
            android:text="@string/log_in"
            android:textColor="@color/color_white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_find_idpw"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:text="@string/find_idpw"
                android:textColor="@color/color_text_white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:text="@string/join"
                android:textColor="@color/color_text_white"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>
    <!-- 로그인 화면 구성 END -->

    <ImageView
        android:layout_centerInParent="true"
        android:id="@+id/img_loading"
        android:background="@drawable/loading_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>