<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/color_white"
        android:layout_width="320dp"
        android:layout_height="400dp">


        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/find_school"
            android:textColor="@color/color_text_medium_gray"
            android:textSize="20dp" />

        <View
            android:layout_below="@id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_action_bar_background" />

        <LinearLayout
            android:layout_below="@id/txt_dialog_title"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="290dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_search_school"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:hint="@string/search_shool_name"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_search_school"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:text="@string/search"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ListView
                android:id="@+id/list_school_name"
                android:divider="@color/color_common_gray"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_blue"
                    android:text="@string/cancel"
                    android:textColor="@color/color_text_white"
                    android:textSize="13dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>