<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@color/color_white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/input_score"
            android:textColor="@color/color_text_medium_gray"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_action_bar_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/select_icons"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_good"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/shape_rect_green"
                    android:src="@drawable/icon01_48dp" />

                <ImageButton
                    android:id="@+id/btn_not_bad"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/shape_rect_green"
                    android:src="@drawable/icon02_48dp" />

                <ImageButton
                    android:id="@+id/btn_bad"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/shape_rect_green"
                    android:src="@drawable/icon03_48dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_blue"
                    android:text="@string/cancel"
                    android:textColor="@color/color_text_white"
                    android:textSize="13dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_loading"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@color/color_translate_gray"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:elevation="2dp"
        android:scaleType="centerInside"
        android:src="@drawable/loading_anim"
        android:visibility="gone" />

</RelativeLayout>